--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 }
 h5{
     text-align: center;
-    background-image: linear-gradient(#6bbfff, #002157);
+    box-shadow: 5px 5px 80px greenyellow;
     color: red;
     
 }
