--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body{
 h7{
     text-align: center;
     box-shadow: 5px 5px 80px greenyellow;
-    color: red;
+    color: white;
+    background-color: black;
     
 }
     
