--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ h7{
     text-align: center;
     box-shadow: 5px 5px 80px greenyellow;
     color: white;
-    background-color: black;
-    
+    background-color: red; 
 }
     
 
