--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 h7{
     text-align: center;
     box-shadow: 5px 5px 80px greenyellow;
-    color: white;
+    color: rgb(red, orange, yellow);
     background-color: red; 
 }
     
