--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body{
 h7{
     text-align: center;
     box-shadow: 5px 5px 80px greenyellow;
-    color: rgb(red, orange, yellow);
-    background-color: red; 
+    color: white;
+    background: red; 
 }
     
 
